# slogger

./: LICENSE  README.md  pyproject.toml
slogger/: __init__.py  config.py  logging_backend.py  loguru_backend.py  std_backend.py  test.py
